# travel-agency

./: .gitignore  agents.py  config.py  crud.py  hello-earth.txt  main.py  main_agent.py  main_tasks.py  main_trip_crew.py  main_v2.py  main_v4.py  models.py  pyproject.toml  query_database.py  tasks.py  trip_crew.py
__archive___/: main_v2.py  print_results.py
archive/: agents_v1.py  agents_v2.py  agenttools.py  fix.py  main_v3.py  service.py  testing_syntax_error.py
controllers/: agents.py  crews.py  tasks.py  tools.py  trips.py
database/: __init__db.py  crud.py  models.py
services/: agent.py  agent_services.py  agents.py  crew.py  crews.py  task.py  tasks.py  trip.py  trips.py
tests/: test_database.py  unit_test_database.py  unit_test_services.py  verify_table.py
tools/: calculating.py  calculator_tools.py  search_tools.py
web/: app.py  app_v1.py
web/static/: style.css
web/templates/: agent_create.html  agent_details.html  agent_list.html  agent_update.html  base.html  index.html  task_create.html  task_details.html  task_list.html  task_update.html  trip_details.html
